# hx4k-pmod

./: .gitmodules  README.md
gateware/: .gitignore  Makefile  hx4k_pmod.pcf
gateware/blink/: Makefile
gateware/blink/rtl/: top.v
gateware/rtl/: ice_pll.v  seven_segment.v  top.v
hardware/: clocksource.sch  digikey_bom.csv  fpga.sch  hx4k_pmod-cache.lib  hx4k_pmod.bak  hx4k_pmod.kicad_pcb  hx4k_pmod.kicad_pcb-bak  mcu.sch  pmod_header.bak  power.bak  usb.bak
hardware/gerber/: hx4k_pmod-B.Cu.gbl  hx4k_pmod-B.Mask.gbs  hx4k_pmod-B.Paste.gbp  hx4k_pmod-B.SilkS.gbo  hx4k_pmod-Edge.Cuts.gm1  hx4k_pmod-F.Cu.gtl  hx4k_pmod-F.Mask.gts  hx4k_pmod-F.Paste.gtp  hx4k_pmod-F.SilkS.gto  hx4k_pmod.drl
programmer_firmware/: CMakeLists.txt
programmer_firmware/include/: config.hpp  flash.hpp  fpga.hpp  rgb.hpp  spi.hpp  uart.hpp  usb.hpp  usb_fsm.hpp  usb_interfaces.h  usb_protocol.hpp
programmer_firmware/ldscripts/: STM32F070CBT6.ld
programmer_firmware/src/: flash.cpp  fpga.cpp  main.cpp  rgb.cpp  spi.cpp  uart.cpp  usb.cpp  usb_fsm.cpp  usb_interfaces.c  usb_protocol.cpp
